replaced images to match figma. fixed more spacing issues

--- a/client/src/Components/Footer.css
+++ b/client/src/Components/Footer.css
@@ -1,3 +1,7 @@
+#footer {
+  width: 100vw
+}
+
 .footerblue {
     height: 470px;
     background-color: #eff8ff;
