--- a/client/src/Components/GetInvolved.css
+++ b/client/src/Components/GetInvolved.css
@@ -123,7 +123,7 @@ h1.step1-description {
   color: #ffffff;
   border-width: 1px;
   font-size: 12px;
-  margin: 2px 12px;
+  margin: 2px 20px;
 }
 
 .numbered-sections2 {
